<resources>
    <string name="app_name">WordPress Client</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_blogs">Мои Блоги</string>
    <string name="menu_categories">Категории</string>
    <string name="menu_labels">Метки</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_bookmarks">Закладки</string>
    <string name="menu_exit">Выход</string>
    <string name="username">Вася Иванов</string>
    <string name="search">Поиск</string>
    <string name="blog_image_contentDescription">Обложка блога</string>
    <string name="blogHeader">Мой Блог</string>
    <string name="blogURL">myblog.wordpress.com</string>
    <string name="title_activity_profile">Мой профиль</string>
    <string name="profile_header">Мой профиль</string>
    <string name="profile_image">Изображение профиля</string>
    <string name="post_image">Обложка поста</string>
    <string name="logo_authorization">WordPress</string>
    <string name="button_login">Войти</string>
    <string name="button_notification">Зарегистрироваться</string>
    <string name="user1">Василий Петров</string>
    <string name="user2">Иван Иванов</string>
    <string name="time1">Сегодня, 13:45</string>
    <string name="time2">Вчера, 13:45</string>
    <string name="post_header">Заголовок поста</string>
    <string name="label">Метка</string>
    <string name="share">Поделиться</string>
    <string name="to_bookmarks">Добавить в закладки</string>
    <string name="settings_postsview">Настройки</string>
    <string name="postsview_header">Заголовок поста</string>
    <string name="categories_viewpost">Категория</string>
    <string name="header_viewpost">Заголовок поста</string>
    <string name="date_post_publication">Дата создания</string>
    <string name="tag1">Тэг 1</string>
    <string name="tag2">Тэг 2</string>
    <string name="long_tag">Длинный тэг</string>
    <string name="avtor">Автор</string>
    <string name="blog_name">Название блога</string>
    <string name="blog_content">In the tumultuous business of cutting-in and attending to a whale,
        there is much running backwards and forwards among the crew.
        Now hands are wanted here, and then again hands are wanted there.
        There is no staying in any one place; for at one and the same time everything has to be done everywhere.
        It is much the same with him who endeavors the description of the scene.
        We must now retrace our way a little.</string>
    <string name="button_comments">12 комментариев</string>
    <string name="ico_time">Время публикации</string>
    <string name="postview_image">Обложка просматриваемого поста</string>
    <string name="avatar_postview">Изображение профиля</string>
    <string name="hint">Контент</string>
    <string name="category_name">Категория</string>
    <string name="category_description">Описание категории</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="viewname">Отображаемое для всех имя</string>
    <string name="aboutuser">Обо мне</string>
    <string-array name="email_list">
        <item>heyfromsteph@gmail.com</item>
        <item>heyfromsteph1@gmail.com</item>
    </string-array>
    <string name="client_id">67107</string>
    <string name="redirect_login">https://login.wordpress.org/?locale=ru_RU</string>
    <string name="redirect_signin">https://wordpress.com/start/user/ru?ref=logged-out-homepage-lp</string>
    <string name="baseURL">https://public-api.wordpress.com/oauth2/authorize</string>
    <string name="get_user_info_url">https://public-api.wordpress.com/oauth2/token</string>


</resources>
