<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_blogs"
            android:icon="@mipmap/ic_menu_blogs"
            android:title="@string/menu_blogs" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@mipmap/ic_menu_categories"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_labels"
            android:icon="@mipmap/ic_menu_labels"
            android:title="@string/menu_labels" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@mipmap/ic_menu_favorites"
            android:title="@string/menu_favorites" />

        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@mipmap/ic_menu_bookmarks"
            android:title="@string/menu_bookmarks" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@mipmap/ic_menu_exit"
            android:title="@string/menu_exit" />

    </group>

</menu>
