<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_blogs">

    <fragment
        android:id="@+id/nav_blogs"
        android:name="com.simbirsoft.wordpressclient.ui.blogs.BlogsFragment"
        android:label="@string/menu_blogs"
        tools:layout="@layout/screen_blogs" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.simbirsoft.wordpressclient.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/screen_categories" />

    <fragment
        android:id="@+id/nav_labels"
        android:name="com.simbirsoft.wordpressclient.ui.labels.LabelsFragment"
        android:label="@string/menu_labels"
        tools:layout="@layout/screen_labels" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.simbirsoft.wordpressclient.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/screen_favorites" />

    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="com.simbirsoft.wordpressclient.ui.bookmarks.BookmarksFragment"
        android:label="@string/menu_bookmarks"
        tools:layout="@layout/screen_bookmarks" />


</navigation>