<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:toolbarId="@+id/toolbar_viewposts">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_viewposts"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_time_postsview"
                android:layout_width="@dimen/icon_time_size"
                android:layout_height="@dimen/icon_time_size"
                android:layout_marginStart="@dimen/icon_time_margin_left"
                android:layout_marginLeft="@dimen/icon_time_margin_left"
                android:layout_marginTop="@dimen/icon_time_margin_top"
                android:contentDescription="@string/ico_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_postsview_textView"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/ic_time" />

            <ImageView
                android:id="@+id/post_imagelabel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_postview_height"
                android:layout_marginTop="@dimen/image_postview_margin_top"
                android:contentDescription="@string/postview_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_publication_postview_textView"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/post_label" />

            <ImageView
                android:id="@+id/avatarimage_postview"
                android:layout_width="@dimen/avatar_postview_size"
                android:layout_height="@dimen/avatar_postview_size"
                android:layout_marginStart="@dimen/avatar_postview_margin_left_top"
                android:layout_marginLeft="@dimen/avatar_postview_margin_left_top"
                android:layout_marginTop="@dimen/avatar_postview_margin_left_top"
                android:contentDescription="@string/avatar_postview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tag1_textView"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/profile_avatar" />

            <TextView
                android:id="@+id/categ_postview_textView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/categ_height"
                android:layout_marginStart="@dimen/categ_margin_left"
                android:layout_marginLeft="@dimen/categ_margin_left"
                android:layout_marginTop="@dimen/categ_margin_top"
                android:text="@string/categories_viewpost"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/categ_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/header_postsview_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/viewheader_margin_left"
                android:layout_marginLeft="@dimen/viewheader_margin_left"
                android:layout_marginTop="@dimen/viewheader_margin_top"
                android:text="@string/postsview_header"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/viewheader_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categ_postview_textView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/date_publication_postview_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_time_margin_left"
                android:layout_marginLeft="@dimen/text_time_margin_left"
                android:layout_marginTop="@dimen/text_time_margin_top"
                android:text="@string/date_post_publication"
                android:textColor="@color/colorDateHeaders"
                android:textSize="@dimen/text_time_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_time_postsview"
                app:layout_constraintTop_toBottomOf="@+id/header_postsview_textView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tag1_textView"
                android:layout_width="@dimen/small_tag_width"
                android:layout_height="@dimen/small_tag_height"
                android:layout_marginStart="@dimen/tag1_margin_left"
                android:layout_marginLeft="@dimen/tag1_margin_left"
                android:layout_marginTop="@dimen/smalltag_margin_top"
                android:background="@drawable/tag_red"
                android:text="@string/tag1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/tag_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_imagelabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tag2_textView"
                android:layout_width="@dimen/small_tag_width"
                android:layout_height="@dimen/small_tag_height"
                android:layout_marginStart="@dimen/tag2_margin_left"
                android:layout_marginLeft="@dimen/tag2_margin_left"
                android:layout_marginTop="@dimen/smalltag_margin_top"
                android:background="@drawable/tag_green"
                android:text="@string/tag2"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/tag_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tag1_textView"
                app:layout_constraintTop_toBottomOf="@+id/post_imagelabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/big_tag_textView"
                android:layout_width="@dimen/big_tag_width"
                android:layout_height="@dimen/big_tag_height"
                android:layout_marginStart="@dimen/bigtag_margin_left"
                android:layout_marginLeft="@dimen/bigtag_margin_left"
                android:layout_marginTop="@dimen/smalltag_margin_top"
                android:background="@drawable/tag_blue"
                android:text="@string/long_tag"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/tag_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tag2_textView"
                app:layout_constraintTop_toBottomOf="@+id/post_imagelabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/avtorname_textview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/avtor_height"
                android:layout_marginStart="@dimen/avtor_margin_left"
                android:layout_marginLeft="@dimen/avtor_margin_left"
                android:layout_marginTop="@dimen/avtor_margin_top"
                android:text="@string/avtor"
                android:textColor="@color/colorHeaders"
                android:textSize="@dimen/avtor_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/avatarimage_postview"
                app:layout_constraintTop_toBottomOf="@+id/tag2_textView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/blogname_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/avtor_margin_left"
                android:layout_marginLeft="@dimen/avtor_margin_left"
                android:text="@string/blog_name"
                android:textColor="@color/colorHeaders"
                android:textSize="@dimen/blogname_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/avatarimage_postview"
                app:layout_constraintTop_toBottomOf="@+id/avtorname_textview"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="@dimen/content_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_margin_l_r"
                android:layout_marginLeft="@dimen/content_margin_l_r"
                android:layout_marginTop="@dimen/content_margin_top"
                android:layout_marginEnd="@dimen/content_margin_l_r"
                android:layout_marginRight="@dimen/content_margin_l_r"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint"
                android:inputType="textMultiLine"
                android:text="@string/blog_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/content_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatarimage_postview"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button_comments"
                android:layout_width="@dimen/button_comments_width"
                android:layout_height="@dimen/button_comments_height"
                android:layout_marginStart="@dimen/button_comments_margin_left_right"
                android:layout_marginLeft="@dimen/button_comments_margin_left_right"
                android:layout_marginTop="@dimen/button_comments_margin_top"
                android:layout_marginEnd="@dimen/button_comments_margin_left_right"
                android:layout_marginRight="@dimen/button_comments_margin_left_right"
                android:layout_marginBottom="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/button_comments"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/button_comments_textsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.431"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_send_msg"
        app:backgroundTint="@color/colorPrimary" />"

</androidx.coordinatorlayout.widget.CoordinatorLayout>