<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView

        android:id="@+id/cv_blogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_xxsmall"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_xxsmall">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_blogimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_small"
                android:adjustViewBounds="true"
                android:background="@mipmap/ic_image_bg"
                android:contentDescription="@string/blog_image_contentDescription"
                android:padding="@dimen/spacing_xxxsmall"
                app:srcCompat="@mipmap/ic_image"
                tools:srcCompat="@mipmap/ic_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginLeft="@dimen/spacing_small"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_small">

                <TextView
                    android:id="@+id/tv_blogheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_xxxsmall"
                    android:layout_weight="1"
                    android:text="@string/blogHeader"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize_medium" />

                <TextView
                    android:id="@+id/tv_blogurl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blogURL"
                    android:textColor="@color/colorBlogURLandTime"
                    android:textSize="@dimen/textsize_xsmall" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>