<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_postitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_postsettings"
                android:layout_width="@dimen/size_btn_postsettings"
                android:layout_height="@dimen/size_btn_postsettings"
                android:layout_marginStart="@dimen/spacing_btnsettings_left"
                android:layout_marginLeft="@dimen/spacing_btnsettings_left"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_small"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:contentDescription="@string/settings_postsview"
                android:paddingLeft="@dimen/spacing_xxxsmall"
                android:paddingTop="@dimen/spacing_xxxsmall"
                android:paddingRight="@dimen/spacing_xxxsmall"
                android:paddingBottom="@dimen/spacing_xxxsmall"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_settings_post"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_postusername"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:src="@mipmap/ic_settings_post" />

            <ImageView
                android:id="@+id/iv_postuser"
                android:layout_width="@dimen/size_iv_postuser"
                android:layout_height="@dimen/size_iv_postuser"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_small"
                android:adjustViewBounds="true"
                android:contentDescription="@string/profile_image"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/profile_avatar" />

            <ImageView
                android:id="@+id/iv_postviewimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xxsmall"
                android:layout_marginLeft="@dimen/spacing_xxsmall"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_xxsmall"
                android:layout_marginRight="@dimen/spacing_xxsmall"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/post_image"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_publicationtime"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/post_label"
                tools:srcCompat="@drawable/post_label" />

            <TextView
                android:id="@+id/tv_publicationtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_xxxsmall"
                android:text="@string/time1"
                android:textColor="@color/colorBlogURLandTime"
                android:textSize="@dimen/textsize_xxsmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_postuser"
                app:layout_constraintTop_toBottomOf="@+id/tv_postusername"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_postusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/user1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textsize_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_postuser"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_postheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/post_header"
                android:textColor="@color/colorBlogURLandTime"
                android:textSize="@dimen/textsize_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_postviewimage"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>