<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wordpress_authorization"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/width_btn"
        android:layout_height="@dimen/height_btn"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginLeft="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_small"
        android:gravity="center_horizontal"
        android:text="@string/button_login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_notification"
        android:layout_width="@dimen/width_btn"
        android:layout_height="@dimen/height_btn"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginLeft="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_small"
        android:gravity="center_horizontal"
        android:text="@string/button_notification"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_logo_left"
        android:layout_marginLeft="@dimen/spacing_logo_left"
        android:layout_marginTop="@dimen/spacing_logo_top"
        android:layout_marginEnd="@dimen/spacing_logo_right"
        android:layout_marginRight="@dimen/spacing_logo_right"
        android:gravity="center_horizontal"
        android:text="@string/logo_authorization"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textsize_logo"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>